--- a/styles/sass/utils/_samples.scss
+++ b/styles/sass/utils/_samples.scss
@@ -52,10 +52,15 @@
   line-height: 24px;
 }
 
-%title-h5{
+%cover-title{
   @extend %titles-circe-uppercase;
-  font-size: 12px;
-  line-height: 24px;
+  font-size: 52px;
+  line-height: 68px;
+
+  @media screen and (max-width: $tablet) {
+    font-size: 26px;
+    line-height: 34px;
+  }
 }
 
 /*----------------------------------- circe text -----------------------------------*/
