--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -27,4 +27,8 @@
 @import './blocks/map';
 @import './blocks/ideas';
 @import './blocks/publications';
+@import './blocks/about-project';
+@import './blocks/titleblock';
+@import './blocks/idea';
+@import './blocks/catalog';
 
