--- a/styles/sass/utils/_reset.scss
+++ b/styles/sass/utils/_reset.scss
@@ -39,6 +39,12 @@ select {
   font: inherit;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
