--- a/styles/sass/blocks/_cover.scss
+++ b/styles/sass/blocks/_cover.scss
@@ -15,7 +15,7 @@
     grid-row: 1;
     width: 100%;
     height: 100%;
-    background-image: url(../../../images/covers/city-cover.jpg);
+    background-image: url(../../images/covers/city-cover.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
